tests/snapshots/example_app_completions__help__feature-sample.snap
---
source: tests/example_app_completions.rs
expression: test!(feature_sample_command)
---
my-app 3.0
Tests completions

USAGE:
    my-app [OPTIONS] [ARGS] [SUBCOMMAND]

ARGS:
    <file>      some input file
    <choice>    [possible values: first, second]

OPTIONS:
    -c, --config     some config file [aliases: conf] [short aliases: C]
    -h, --help       Print help information
    -V, --version    Print version information

SUBCOMMANDS:
    help    Print this message or the help of the given subcommand(s)
    test    tests things

my-app-test 3.0
tests things

USAGE:
    my-app test [OPTIONS]

OPTIONS:
        --case <case>    the case to test
    -h, --help           Print help information
    -V, --version        Print version information


my-app-help 
Print this message or the help of the given subcommand(s)

USAGE:
    my-app help [SUBCOMMAND]...

ARGS:
    <SUBCOMMAND>...    The subcommand whose help message to display



