tests/snapshots/example_app_completions__help__special-commands.snap
---
source: tests/example_app_completions.rs
expression: test!(special_commands_command)
---
my-app 3.0
Tests completions

USAGE:
    my-app [OPTIONS] [ARGS] [SUBCOMMAND]

ARGS:
    <file>      some input file
    <choice>    [possible values: first, second]

OPTIONS:
    -c, --config     some config file [aliases: conf] [short aliases: C]
    -h, --help       Print help information
    -V, --version    Print version information

SUBCOMMANDS:
    help                     Print this message or the help of the given subcommand(s)
    some-cmd-with-hyphens    
    some_cmd                 tests other things
    test                     tests things

my-app-test 3.0
tests things

USAGE:
    my-app test [OPTIONS]

OPTIONS:
        --case <case>    the case to test
    -h, --help           Print help information
    -V, --version        Print version information


my-app-some_cmd 3.0
tests other things

USAGE:
    my-app some_cmd [path]...

ARGS:
    <path>...    

OPTIONS:
    -h, --help       Print help information
    -V, --version    Print version information


my-app-some-cmd-with-hyphens 3.0

USAGE:
    my-app some-cmd-with-hyphens

OPTIONS:
    -h, --help       Print help information
    -V, --version    Print version information


my-app-some-hidden-cmd 3.0

USAGE:
    my-app some-hidden-cmd

OPTIONS:
    -h, --help       Print help information
    -V, --version    Print version information


my-app-help 
Print this message or the help of the given subcommand(s)

USAGE:
    my-app help [SUBCOMMAND]...

ARGS:
    <SUBCOMMAND>...    The subcommand whose help message to display



